# esp32c3-embassy-picoserve

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: clock.rs  http.rs  lib.rs  random.rs  web.rs  wifi.rs
tests/: hello_test.rs
