[package]
edition = "2021"
name    = "esp32c3-embassy-picoserve"
version = "0.1.0"

[[bin]]
name = "esp32c3-embassy-picoserve"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal                = { version = "=1.0.0-beta.1", features = ["esp32c3", "unstable"] }

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
rtt-target = "0.6.1"
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["nightly", "task-arena-size-81920"] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.8.1", features = ["esp32c3"] }
esp-wifi = { version = "0.14.1", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
picoserve = { version = "0.16.0", features = ["embassy"] }
heapless = "0.8.0"
jiff = { version = "0.2.15", default-features = false, features = ["alloc", "static"]}
time = { version = "0.3", default-features = false, features = ["parsing"] }
reqwless = { version = "0.13", default-features = false, features = ["alloc", "embedded-tls"] }
rand_core = "0.9.3"

[build-dependencies]
dotenv = "0.15"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
# codegen-units  = 1     # LLVM can perform better optimizations using a single thread
debug            = 2     # Set to 2 for debug
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
